--- a/templates/sleep_show.html
+++ b/templates/sleep_show.html
@@ -1,11 +1,15 @@
 <html lang="ja">
     <head>
         <title>fitness-app</title>
+        <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' >
         <style>
             h2{
                 margin-top:5%;
                 margin-left:30%;
                 font-size:200%;
+            }
+            h5{
+                margin-top:2%;
             }
             button{
                 margin-top:2%;
@@ -15,18 +19,22 @@
                 font-size:100%;
                 background-color:rgb(60, 60, 181);
             }
+            .reviewcon{
+                margin-top:3%;
+                margin-bottom:3%;
+                border:solid 1px #000;
+            }
         </style>
     </head>
     <body>
         <h1>{{post.id}}日目の睡眠記録</h1>
-        <h5>記録日</h5>
-        <h5>{{post.day}}<h5>
-        <h5>睡眠時刻</h5>
-        <h5>{{post.sleeptime}}</h5>
-        <h5>起床時刻</h5>
-        <h5>{{post.getuptime}}</h5>
+        <h5>記録日:{{post.day}}</h5>
+        <h5>睡眠時刻:{{post.sleeptime}}</h5>
+        <h5>起床時刻:{{post.getuptime}}</h5>
         <h5>AIによる健康アドバイス</h5>
-        <h5>{{post.review}}</h5>
+        <div class="reviewcon">
+            <h5>{{post.review|markdown}}</h5>
+        </div>
         <a href="/sleep">トップに戻る</a>
     </body>
 </html>
