--- a/templates/walk.html
+++ b/templates/walk.html
@@ -22,19 +22,19 @@
         </style>
     </head>
     <body>
-        <h2>睡眠記録</h2>
+        <h2>歩いた数を記録する</h2>
         <table class="table table-striped table-hover tablepos">
-            <tr><th>日付</th><th>睡眠時刻</th><th>起床時刻</th><th>詳細はこちら</th></tr>
-            {% for sleep in sleeps %}
+            <tr><th>日付</th><th>歩数</th><th>詳細はこちら</th></tr>
+            {% for walk in walks %}
             <tr>
-                <td>{{sleep.day}}</td>
-                <td>{{sleep.sleeptime}}</td>
-                <td>{{sleep.getuptime}}</td>
-                <td><button class="btn btn-outline-primary" onclick="location.href='/sleep/detail/{{sleep.id}}'">詳細はこちら</button></td>
+                <td>{{walk.day}}</td>
+                <td>{{walk.walknum}}</td>
+                <td><button class="btn btn-outline-primary" onclick="location.href='/walk/detail/{{walk.id}}'">詳細はこちら</button></td>
             </tr>
             {% endfor %}
         </table>
+        <img src="data:image/pmg;base64,{{graph}}" alt="歩数の記録">
         <button class="btn btn-primary" onclick="location.href='/'">トップに戻る</button>
-        <button class="btn btn-primary"onclick="location.href='/sleep/record'">睡眠を記録する</button>
+        <button class="btn btn-primary"onclick="location.href='/walk/record'">歩いた数を記録する</button>
     </body>
 </html>
