--- a/templates/walk_show.html
+++ b/templates/walk_show.html
@@ -3,27 +3,37 @@
         <title>fitness-app</title>
         <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css' >
         <style>
-            body{
-                padding-top:5%;
-            }
             h2{
                 margin-top:5%;
                 margin-left:30%;
                 font-size:200%;
             }
+            h5{
+                margin-top:2%;
+            }
             button{
-                margin-top:6%;
+                margin-top:2%;
                 margin-left:35%;
                 height:8%;
                 width:15%;
                 font-size:100%;
                 background-color:rgb(60, 60, 181);
             }
+            .reviewcon{
+                margin-top:3%;
+                margin-bottom:3%;
+                border:solid 1px #000;
+            }
         </style>
     </head>
     <body>
-        <h2>fitnessアプリへようこそ</h2>
-        <button class="btn btn-primary" onclick="location.href='/sleep'">睡眠を記録</button>
-        <button class="btn btn-primary" onclick="location.href='/walk'">歩数を記録</button>
+        <h1>{{post.id}}日目の歩数記録</h1>
+        <h5>記録日:{{post.day}}</h5>
+        <h5>歩数:{{post.walknum}}歩</h5>
+        <h5>AIによる健康アドバイス</h5>
+        <div class="reviewcon">
+            <h5>{{post.review|markdown}}</h5>
+        </div>
+        <a href="/walk">トップに戻る</a>
     </body>
 </html>
